[package]
name = "marks"
version = "0.1.0"
authors = ["Isa Mert Gurbuz <isamert@protonmail.com>"]
description = "A simple and /hopefully/ fast semantic search tool for org/markdown files. WIP."
edition = "2018"
repository = "https://github.com/isamert/marks"
license-file = "LICENSE"
keywords = ["org-mode", "markdown", "search", "command-line"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[dependencies]
clap = "2"
rayon = "1.5"
regex = "1"
walkdir = "2"
lazy_static = "1.4"
fuzzy-matcher = "0.3"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
term = "0.6"
combine = "4.4"
chrono = "0.4"
#sublime_fuzzy = "0.6"
indoc = "1.0"