[package]
name = "marks"
version = "0.1.0"
authors = ["Isa Mert Gurbuz <isamert@protonmail.com>"]
description = "A simple and /hopefully/ fast semantic search tool for org/markdown files. WIP."
edition = "2018"
repository = "https://github.com/isamert/marks"
license-file = "LICENSE"
keywords = ["org-mode", "markdown", "search", "command-line"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[dependencies]
clap = "4.5.27"
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"
fuzzy-matcher = "0.3"
structopt = { version = "0.3", features = [ "paw" ] }
term = "1.0.1"
combine = "4.6.7"
chrono = "0.4.39"
itertools = "0.14.0"
#sublime_fuzzy = "0.6"
